# Proyecto1EstructuraDeDatos

./: CMakeLists.txt
Controller/: Client.cpp  ListaDoblePreferencial.cpp  ListaSimple.cpp  Nodo.cpp  NodoPilas.cpp  Pila.cpp  PilasGraderias.cpp
Model/: Client.h  ListaDoblePreferencial.h  ListaSimple.h  Nodo.h  NodoPilas.h  Pila.h  PilaGraderia.h
